--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,10 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+.choice-container {
+  border-style: solid;
+  border-radius: 5px;
+  padding: 15px;
+  margin-bottom: 15px;
+}
